version updated to 1.7.2, jogl version updated to 2.5.0 getScreen IllegalReflexiveAccess call removed